--- a/init.rb.save.1
+++ b/init.rb.save.1
@@ -3,6 +3,7 @@ require_relative 'relaycontrol.rb'
 require_relative 'thermostat.rb'
 require_relative 'serverconn.rb'
 require_relative 'internet.rb'
+require 'faraday'
 
 thermostat = Thermostat.new
 temperature = Thermometer.new
@@ -17,8 +18,15 @@ while i < 2 do
 		   Time.now.min == 40 || Time.now.min == 50 then
 		   DbConnect.write_to_db(temperature.get_temperature) #1
 		end
+
+		if Faraday.get('https://gloriouspi.herokuapp.com').status >= 400 then
+			user_mode = 'Off'
+		else
+			user_set_temp = DbConnect.read_webapp_user_set_temp #2
+			user_mode = DbConnect.read_webapp_user_mode #2
+		end
 	
-		user_mode = 'Off' if internet_connection? == false
+		user_mode = 'Off' if inte == false
 
 		case user_mode
 		when "Fan"
@@ -34,9 +42,7 @@ while i < 2 do
 		sleep(31)
 
 		rescue PG::ConnectionBad, Faraday::ConnectionFailed
-		thermostat.off_mode
-		puts "connection error"
-		retry
+		user_mode = 'Off'
 	end
 
 end
